[package]
name = "rbuf"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = { version = "0.18.8", features = ["v1_16"] }
gstreamer-app = "0.18.7"
gstreamer-player = "0.18.0"
tokio = { version = "1.21.2", features = ["full"] }
futures = "0.3.24"
tracing = { version = "0.1.37", features = ["log-always"] }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"
crossbeam = "0.8.2"
