[package]
name = "streamsync-play"
version = "0.1.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/streamsync"
license = "Apache-2.0"

[dependencies]
streamsync-api = { version = "0.1.0", path = "../streamsync-api" }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "signal"] }
clap = { version = "4.0.32", features = ["derive"] }
