[package]
name = "stsync-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.24"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tracing ={ version = "0.1.37", features = ["log-always"] }
socket2 = "0.4.7"
snowflaked = { version = "0.1.5", features = ["sync"] }
bytes = "1.2.1"
tokio-stream = { version = "0.1.11", features = ["sync"] }
hyper = { version = "0.14.20", features = ["http1", "http2", "server"] }
ahash = "0.8.0"
parking_lot = "0.12.1"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
debug-assertions = false
