[package]
name = "stsync-proxy"
description = "The streamsync SRT proxy server"
version = "0.2.0"
edition = "2021"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/streamsync"
license = "Apache-2.0"

publish = false

[dependencies]
streamsync-macros = { version = "0.1.0", path = "../streamsync-macros" }
futures = "0.3.24"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full", "tracing"] }
# Only include log to statically disable verbose log levels.
log = "0.4.17"
tracing ={ version = "0.1.37", features = ["log-always"] }
socket2 = "0.4.7"
snowflaked = { version = "0.1.5", features = ["sync"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
hyper = { version = "0.14.20", features = ["http1", "http2", "server"] }
ahash = "0.8.0"
parking_lot = "0.12.1"
clap = { version = "4.0.18", features = ["derive"] }
pin-project = "1.0.12"
serde_json = "1.0.87"
toml = "0.5.9"

# Fork of bytes with a public bytes vtable until bytes::Vtable becomes pub.
# Required for custom arena allocator.
bytes = { git = "https://github.com/MrGunflame/bytes", branch = "pub-vtable" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.1", features = ["signal"] }

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
debug-assertions = false
